--- a/style.css
+++ b/style.css
@@ -19,3 +19,47 @@
     color: aliceblue;
     padding: 8px;
 }
+.cat1, .cat2, .cat3{
+    padding: 10px 30px;
+    border-radius: 10px;
+   
+}
+.cat1{
+    background-color: orange;
+    background-image: linear-gradient(45deg,rgb(168, 99, 20),orange);
+    
+
+}
+.cat2{
+    background-color: orchid;
+    background-image: linear-gradient(45deg,rgb(97, 11, 83),rgb(224, 27, 215));
+    
+}
+.cat3{
+    background-color: blue;
+    background-image: linear-gradient(45deg,rgb(32, 13, 138),rgb(79, 62, 155));
+}
+.categories h1{
+    color: white;
+}
+.categories img{
+    width: 100px;
+}
+.card{
+    border:none;
+    box-shadow: 5px 5px 10px lightgray;
+}
+.card-footer{
+    background-color: white;
+}
+#subscribe{
+    height: 300px;
+    padding-top: 100px;
+}
+#subscribe h6{
+    color: grey;
+}
+footer{
+    text-align: center;
+    margin-bottom: 20px;
+}
